2005-12-28  Don Allingham  <don@gramps-project.org>
	* src/Makefile.am: add PythonMime and GnomeMime
	* src/GnomeMime.py: GNOME based mime handling
	* src/PythonMime.py: Python based mime handling
	* src/AddMedia.py: gnome code isolation
	* src/DisplayState.py: gnome code isolation
	* src/EditPerson.py: gnome code isolation
	* src/EditRepository.py: gnome code isolation
	* src/GnomeMime.py: gnome code isolation
	* src/GrampsDisplay.py: gnome code isolation
	* src/GrampsMime.py: gnome code isolation
	* src/ImageSelect.py: gnome code isolation
	* src/ImgManip.py: gnome code isolation
	* src/PluginMgr.py: toolbar/menu support
	* src/Plugins.py: toolbar/menu support
	* src/RepositoryRefEdit.py: gnome code isolation
	* src/SelectObject.py: gnome code isolation
	* src/Utils.py: gnome code isolation
	* src/ViewManager.py: toolbar/menu support, gnome code isolation
	* src/GrampsDb/_GrampsBSDDB.py: unified messaging
	* src/GrampsDb/_ReadGedcom.py: unified messaging
	* src/plugins/WriteFtree.py: gnome code isolation

2005-12-25  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: remove debugging statements
	* src/DisplayState.py: remove extra rebuild request
	* src/Plugins.py: start support of Report menu
	* src/ViewManager.py: tie in report support

2005-12-25  Alex Roitman  <shura@gramps-project.org>
	* src/EditPlace.py: Change arguments, use correct track.
	* src/PlaceView.py: Call EditPlace with new arguments.
	* src/Sources.py: Minor.

2005-12-24  Don Allingham  <don@gramps-project.org>
	* src/Bookmarks.py: get bookmark menu working
	* src/EditPlace.py: menu tracking
	* src/DisplayState.py: recent file support
	* src/ViewManager.py: recent file support

2005-12-23  Don Allingham  <don@gramps-project.org>
	* src/DisplayState.py: recent file support
	* src/EditPerson.py: Window management
	* src/EditSource.py: Window management
	* src/EventEdit.py: Window management
	* src/ListBox.py: Window management
	* src/Sources.py: Window management